[package]
name = "fugit-timer"
description = "A Count Down Timer abstaction that uses fugit time primitives"
documentation = "https://docs.rs/fugit-timer"
version = "0.1.3"
edition = "2021"
keywords = ["Time", "Instant", "const"]
categories = ["date-and-time", "embedded", "hardware-support", "no-std"]
repository = "https://github.com/burrbull/fugit-timer"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
fugit = "0.3.3"
nb = "1.0.0"
